<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tvchatten.floortileapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#68614e"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtLength"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/txtLength"
        android:layout_marginTop="15dp"
        android:hint="@string/hintLength" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtWidth"
        android:layout_below="@+id/txtLength"
        android:layout_centerHorizontal="true"
        android:text="@string/txtWidth"
        android:layout_marginTop="15dp"
        android:hint="@string/hintWidth" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnResult"
        android:id="@+id/btnResult"
        android:layout_alignLeft="@+id/txtWidth"
        android:layout_alignStart="@+id/txtWidth"
        android:layout_alignRight="@+id/txtWidth"
        android:layout_alignEnd="@+id/txtWidth"
        android:layout_below="@+id/radioGroup" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:text="@string/txtResult"
        android:layout_alignRight="@+id/radioGroup"
        android:layout_alignEnd="@+id/txtWidth"
        android:layout_below="@+id/btnResult"
        android:layout_alignLeft="@+id/btnResult"
        android:layout_alignStart="@+id/btnResult" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnResult"
        android:layout_alignStart="@+id/btnResult"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="177dp"
            android:layout_height="65dp"
            android:text="@string/radSmallTile"
            android:id="@+id/radSmallTile"
            android:checked="false"
            android:textSize="25sp" />

        <RadioButton
            android:layout_width="177dp"
            android:layout_height="65dp"
            android:text="@string/radLargeTile"
            android:id="@+id/radLargeTile"
            android:checked="false"
            android:textSize="25sp" />

    </RadioGroup>

</RelativeLayout>
